[project]
name = "rag-agent-poc"
version = "0.1.0"
description = ""
authors = [
    {name = "ritish, kurmaritish017@gmcail.com"}
]
license = {text = "No-License"}
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "langchain (>=1.0.5,<2.0.0)",
    "langgraph (>=1.0.2,<2.0.0)",
    "langchainhub (>=0.1.21,<0.2.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "tavily-python (>=0.7.12,<0.8.0)",
    "chromadb (>=1.3.4,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "pytest (>=9.0.0,<10.0.0)",
    "langchain-google-genai (>=3.0.1,<4.0.0)",
    "langchain-core (>=1.0.4,<2.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "langchain-huggingface (>=1.0.1,<2.0.0)",
    "langchain-chroma (>=1.0.0,<2.0.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pyppeteer (>=2.0.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
